--- a/Learningcurves.ipynb
+++ b/Learningcurves.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Learningcurves.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTw8jHdXpS3bQSwnOwGn+V",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPjjobCtJiqXNgCNce3mXhb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +35,20 @@
       },
       "source": [
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rSqlIHYMLL7n",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a=7"
       ],
       "execution_count": 0,
       "outputs": []
